--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
@@ -60,7 +60,15 @@
 			"SUBTITLE": "अपनी बैठक को भावी पीढ़ी के लिए रिकॉर्ड करें",
 			"CONTENT_TITLE": "अपना वीडियो कॉल रिकॉर्ड करें",
 			"CONTENT_SUBTITLE": "रिकॉर्डिंग समाप्त हो जाने पर आप इसे आसानी से डाउनलोड कर सकेंगे",
-			"STARTING": "रिकॉर्डिंग शुरू कर रहा है"
+			"STARTING": "रिकॉर्डिंग शुरू कर रहा है",
+			"STOPPING": "रिकॉर्डिंग बंद करना",
+			"PLAY": "खेलें",
+			"DELETE": "मिटाना",
+			"CANCEL": "रद्द करना",
+			"DELETE_QUESTION": "क्या आप वाकई रिकॉर्डिंग हटाना चाहते हैं",
+			"DOWNLOAD": "डाउनलोड",
+			"RECORDINGS": "रिकॉर्डिंग",
+			"NO_MODERATOR": "केवल मॉडरेटर ही रिकॉर्डिंग शुरू कर सकता है"
 		}
 	},
     "ERRORS": {
