--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
@@ -60,7 +60,15 @@
 			"SUBTITLE": "Grave a sua reunião para a posteridade",
 			"CONTENT_TITLE": "Grave a sua videochamada",
 			"CONTENT_SUBTITLE": "Quando a gravação tiver terminado, poderá descarregá-la com facilidade",
-			"STARTING": "Começar a gravação"
+			"STARTING": "Começar a gravação",
+			"STOPPING": "Parando a gravação",
+			"PLAY": "Toque",
+			"DELETE": "Excluir",
+			"CANCEL": "Cancelar",
+			"DELETE_QUESTION": "Tem certeza de que deseja excluir a gravação?",
+			"DOWNLOAD": "Download",
+			"RECORDINGS": "GRAVAÇÕES",
+			"NO_MODERATOR": "Só o MODERADOR pode iniciar a gravação"
 		}
 	},
 	"ERRORS": {
