--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/fr.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/fr.json
@@ -34,6 +34,8 @@
 		"MORE_OPTIONS": "Plus d'options",
 		"FULLSCREEN": "Plein écran",
 		"EXIT_FULLSCREEN": "Quitter le plein écran",
+		"ENABLE_SUBTITLES": "Activer les sous-titres",
+		"DISABLE_SUBTITLES": "Désactiver les sous-titres",
 		"BACKGROUND": "Effets de fond",
 		"START_RECORDING": "démarrer l'enregistrement",
 		"STOP_RECORDING": "Arrêter l'enregistrement",
@@ -70,7 +72,8 @@
 			"GENERAL": "Général",
 			"VIDEO": "Vidéo",
 			"AUDIO": "l'audio",
-			"LANGUAGE": "Langue"
+			"LANGUAGE": "Langue",
+			"SUBTITLE": "Les sous-titres"
 		},
 		"BACKGROUND": {
 			"TITLE": "Effets de fond",
