--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/es.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/es.json
@@ -34,6 +34,8 @@
 		"MORE_OPTIONS": "Más opciones",
 		"EXIT_FULLSCREEN": "Quitar pantalla completa",
 		"FULLSCREEN": "Pantalla completa",
+		"ENABLE_SUBTITLES": "Activar subtítulos",
+		"DISABLE_SUBTITLES": "Desactivar subtítulos",
 		"BACKGROUND": "Efectos de fondo",
 		"START_RECORDING": "Iniciar grabación",
 		"STOP_RECORDING": "Detener grabación",
@@ -70,7 +72,8 @@
 			"GENERAL": "General",
 			"VIDEO": "Video",
 			"AUDIO": "Audio",
-			"LANGUAGE": "Idioma"
+			"LANGUAGE": "Idioma",
+			"SUBTITLE": "Subtítulos"
 		},
 		"BACKGROUND": {
 			"TITLE": "Efectos de fondo",
