--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/ja.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/ja.json
@@ -34,6 +34,8 @@
         "MORE_OPTIONS": "その他のオプション",
         "FULLSCREEN": "フルスクリーン",
         "EXIT_FULLSCREEN": "フルスクリーンを終了する",
+        "ENABLE_SUBTITLES": "字幕を有効にする",
+		"DISABLE_SUBTITLES": "字幕を無効にする",
         "BACKGROUND": "背景効果",
         "START_RECORDING": "録画開始",
 		"STOP_RECORDING": "録画の停止",
@@ -70,7 +72,8 @@
 			"GENERAL": "全般的",
 			"VIDEO": "ビデオ",
 			"AUDIO": "オーディオ",
-			"LANGUAGE":"言語"
+			"LANGUAGE":"言語",
+            "SUBTITLE": "字幕"
 		},
         "BACKGROUND": {
             "TITLE": "背景効果",
