--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
@@ -34,6 +34,8 @@
 		"MORE_OPTIONS": "Mais opções",
 		"FULLSCREEN": "Tela cheia",
 		"EXIT_FULLSCREEN": "Sair da tela cheia",
+		"ENABLE_SUBTITLES": "Ativar legendas",
+		"DISABLE_SUBTITLES": "Desativar legendas",
 		"BACKGROUND": "Efeitos de fundo",
 		"START_RECORDING": "Iniciar_gravação",
 		"STOP_RECORDING": "Parar de gravar",
@@ -70,7 +72,8 @@
 			"GENERAL": "Em geral",
 			"VIDEO": "Vídeo",
 			"AUDIO": "Áudio",
-			"LANGUAGE":"Linguagem"
+			"LANGUAGE":"Linguagem",
+			"SUBTITLE": "Legendas"
 		},
 		"BACKGROUND": {
 			"TITLE": "Efeitos de fundo",
