--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/en.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/en.json
@@ -35,8 +35,8 @@
 		"MORE_OPTIONS": "More options",
 		"FULLSCREEN": "Fullscreen",
 		"EXIT_FULLSCREEN": "Exit fullscreen",
-		"ENABLE_SUBTITLES": "Enable subtitles",
-		"DISABLE_SUBTITLES": "Disable subtitles",
+		"ENABLE_CAPTIONS": "Enable captions",
+		"DISABLE_CAPTIONS": "Disable captions",
 		"BACKGROUND": "Background effects",
 		"START_RECORDING": "Start recording",
 		"STOP_RECORDING": "Stop recording",
@@ -74,7 +74,7 @@
 			"VIDEO": "Video",
 			"AUDIO": "Audio",
 			"LANGUAGE": "Language",
-			"SUBTITLE": "Subtitles"
+			"CAPTIONS": "Captions"
 		},
 		"BACKGROUND": {
 			"TITLE": "Background effects",
