--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/nl.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/nl.json
@@ -34,8 +34,8 @@
 		"MORE_OPTIONS": "Meer opties",
 		"FULLSCREEN": "Volledig scherm",
 		"EXIT_FULLSCREEN": "Volledig scherm verlaten",
-		"ENABLE_SUBTITLES": "Ondertiteling inschakelen",
-		"DISABLE_SUBTITLES": "Ondertiteling uitschakelen",
+		"ENABLE_CAPTIONS": "Ondertiteling inschakelen",
+		"DISABLE_CAPTIONS": "Ondertiteling uitschakelen",
 		"BACKGROUND": "Achtergrondeffecten",
         "START_RECORDING": "Start opname",
 		"STOP_RECORDING": "Stop opname",
@@ -73,7 +73,7 @@
 			"VIDEO": "Video",
 			"AUDIO": "Audio",
 			"LANGUAGE":"Taal",
-			"SUBTITLE": "Ondertitels"
+			"CAPTIONS": "Ondertitels"
 		},
 		"BACKGROUND": {
 			"TITLE": "Achtergrondeffecten",
