--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
@@ -34,8 +34,8 @@
 		"MORE_OPTIONS": "अधिक विकल्प",
 		"FULLSCREEN": "पूर्ण स्क्रीन",
 		"EXIT_FULLSCREEN": "पूर्ण स्क्रीन से बाहर निकलें",
-		"ENABLE_SUBTITLES": "उपशीर्षक सक्षम करें",
-		"DISABLE_SUBTITLES": "उपशीर्षक अक्षम करें",
+		"ENABLE_CAPTIONS": "उपशीर्षक सक्षम करें",
+		"DISABLE_CAPTIONS": "उपशीर्षक अक्षम करें",
 		"BACKGROUND": "पृष्ठभूमि प्रभाव",
 		"START_RECORDING": "रिकॉर्डिंग प्रारंभ करें",
 		"STOP_RECORDING": "रिकॉर्डिंग रोकें",
@@ -73,7 +73,7 @@
 			"VIDEO": "वीडियो",
 			"AUDIO": "ऑडियो",
 			"LANGUAGE": "भाषा",
-			"SUBTITLE": "उपशीर्षक"
+			"CAPTIONS": "उपशीर्षक"
 		},
 		"BACKGROUND": {
 			"TITLE": "पृष्ठभूमि प्रभाव",
